# chambers-of-shb

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  manifest.json  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
SAMPLE-CASES/: README.md
agents/: admin-law-specialist.md  adr-specialist.md  civil-litigation-strategist.md  civil-procedure-specialist.md  commercial-litigation-specialist.md  constitutional-law-specialist.md  consumer-law-specialist.md  consumer-protection-specialist.md  contract-law-specialist.md  contract-remedies-expert.md  corporate-compliance-officer.md  corporate-formation-specialist.md  criminal-law-specialist.md  criminal-procedure-expert.md  cyber-law-specialist.md  evidence-analyst.md  evidence-evaluator.md  india-civic-law-specialist.md  indian-law-master-orchestrator.md  indian-law-specialist.md  ip-law-specialist.md  ip-portfolio-strategist.md  jurisdiction-compliance-analyst.md  labour-dispute-strategist.md  limitation-specialist.md  local-governance-specialist.md  mock-court-simulator.md  pil-environmental-specialist.md  property-due-diligence-agent.md  property-law-specialist.md  rti-specialist.md  specific-relief-specialist.md
commands/: analyze-contract.md  appeal-strategy.md  assess-specific-performance.md  bail-application.md  breach-analysis.md  calculate-limitation.md  case-prep.md  check-jurisdiction.md  check-writ.md  civic-query.md  civil-suit.md  commercial-court-check.md  consumer-complaint.md  contract-advice.md  contract-review.md  criminal-law-advice.md  file-fir.md  (+15 more)
(+309 files in other folders)
