[project]
name = "chambers-of-shb"
version = "1.0.0"
description = "Chambers of SHB legal assistant repo for research, drafting, court data, and contract triage."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "edenbuilds" }]
dependencies = ["mcp[cli]>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
